# aemeath

./: .envrc  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  TODO.md  build.sh  build_cli.sh  clean.sh  clippy.toml  release.sh  release.toml
aemeath-core/: Cargo.toml
aemeath-core/src/: agent.rs  agent_lifecycle.rs  agent_tests.rs  compact.rs  config.rs  cost.rs  error.rs  guidance.rs  history.rs  hook.rs  lib.rs  logging.rs  mcp.rs  mcp_manager.rs  message.rs  permission.rs  provider.rs  scheduler.rs  security.rs  session.rs  skill.rs  state.rs  string_idx.rs  task.rs  token_estimation.rs  tool.rs  tool_result_storage.rs
aemeath-core/src/command/: mod.rs  parser.rs  registry.rs
aemeath-core/src/command/commands/: builtin.rs  config_cmd.rs  debug.rs  effort.rs  git.rs  help.rs  mcp.rs  memory.rs  memory_support.rs  misc.rs  mod.rs  model.rs  reflect.rs  session.rs  stats.rs  task.rs  tasks.rs  think.rs  tools.rs
aemeath-core/src/compact/: autocompact.rs  micro.rs  mod.rs  restore.rs  summary.rs  truncate.rs
aemeath-core/src/compact/restore/: assemble.rs  mod.rs  restore_files.rs  sanitize_pairs.rs  tests.rs
aemeath-core/src/config/: hooks.rs  legacy.rs  logging.rs  manager.rs  mod.rs  models.rs  permissions.rs  storage.rs  tools.rs  ui.rs
aemeath-core/src/config/manager/: merge.rs  mod.rs  persistence.rs
aemeath-core/src/config/models/: deserialize.rs  error.rs  mod.rs  resolve.rs  tests.rs  types.rs
aemeath-core/src/cost/: mod.rs  summary.rs  tracker.rs
aemeath-core/src/guidance/: constants.rs  resolver.rs
aemeath-core/src/hook/: data.rs  events.rs  result.rs  runner.rs  tests.rs
aemeath-core/src/hook/events/: extra.rs
aemeath-core/src/logging/: json.rs  rotation.rs  tests.rs
aemeath-core/src/mcp/: client.rs  response_limit.rs  sse.rs  validation.rs
aemeath-core/src/mcp_manager/: config.rs  connection.rs  diff.rs  wrapper.rs
aemeath-core/src/memory/: dedup.rs  format.rs  mod.rs  path.rs  scoring.rs  session_reminder.rs  store.rs
aemeath-core/src/message/: constructors.rs  mod.rs  query.rs  tests.rs
aemeath-core/src/reflection/: apply.rs  format.rs  mod.rs  prompt.rs  types.rs
aemeath-core/src/scheduler/: mod.rs  persistence.rs
aemeath-core/src/session/: mod.rs  types.rs
aemeath-core/src/skill/: loader.rs
aemeath-core/src/state/: settings.rs
aemeath-core/src/string_idx/: byte_idx.rs  char_idx.rs  mod.rs
aemeath-core/src/task/: batch.rs  display.rs  lifecycle.rs  lifecycle_tests.rs  list.rs  mod.rs  store.rs  types.rs
agent/composition/: Cargo.toml
agent/composition/src/: app.rs  audit.rs  delivery_logging.rs  lib.rs  memory.rs  project.rs  provider.rs  provider_tests.rs  runtime.rs  tools.rs  update.rs
agent/composition/tests/: audit_worker_assembly.rs  command_wiring.rs  main_session_wiring.rs
agent/features/audit/: Cargo.toml
agent/features/audit/src/: adapters.rs  application.rs  contract.rs  domain.rs  gateway.rs  lib.rs  ports.rs
agent/features/audit/tests/: append_store_contract.rs  usage_contract.rs  usage_query_contract.rs  usage_worker_contract.rs
agent/features/config/: Cargo.toml
agent/features/config/src/: adapters.rs  application.rs  contract.rs  lib.rs
agent/features/config/tests/: config_wiring.rs
agent/features/context/: Cargo.toml
agent/features/context/src/: adapters.rs  api.rs  application.rs  budget.rs  capabilities.rs  context_port.rs  contract.rs  domain.rs  gateway.rs  lib.rs  memory_inject.rs  ports.rs  prompt.rs  session.rs
agent/features/context/tests/: application_service_contract.rs  application_service_failures.rs  canonical_session_repository.rs  context_port_contract.rs  guidance_contract.rs  in_memory_session_backing.rs  isolated_context_with_skill.rs  main_session_config_facade.rs  main_session_gate.rs  main_session_wiring.rs  session_envelope_codec.rs  (+5 more)
agent/features/hook/: Cargo.toml
agent/features/memory/: Cargo.toml
agent/features/project/: Cargo.toml
agent/features/provider/: Cargo.toml
agent/features/runtime/: Cargo.toml
agent/features/storage/: Cargo.toml
agent/features/tools/: Cargo.toml  build.rs
agent/features/update/: Cargo.toml
agent/project/: Cargo.toml
agent/project/src/: api.rs  lib.rs  worktree.rs
agent/provider/: Cargo.toml
agent/provider/src/: api.rs  client.rs  lib.rs  pool.rs  provider.rs  stream.rs  types.rs
agent/share/: Cargo.toml
agent/share/src/: lib.rs  memory_ops.rs  skill_ops.rs  skill_ops_loader.rs  string_idx.rs  task_ops.rs  tool.rs  worktree_ops.rs
agent/shared/: Cargo.toml  build  build.rs
agent/shared/src/: adapter.rs  config.rs  error.rs  error_tests.rs  lib.rs  memory.rs  memory_ops.rs  message.rs  reasoning.rs  reasoning_tests.rs  session_types.rs  skill_ops.rs  string_idx.rs  task.rs  tool.rs
agent/shared/tests/: audit_config_contract.rs  config_snapshot_revision.rs
agent/storage/: Cargo.toml
agent/storage/src/: api.rs  history.rs  lib.rs  tool_result_storage.rs
apps/cli/: Cargo.toml
apps/cli/src/: agent_runner.rs  args.rs  chat.rs  cli.rs  command_contract_tests.rs  logging_setup.rs  main.rs  mcp_loader.rs  model_selection.rs  panic_hook.rs  prompt.rs  prompt_tests.rs  reflection.rs  run_orchestration.rs  runtime_adapter.rs  session_lock.rs  sessions_command.rs  subcommand.rs  task_reminder.rs  tui.rs
apps/cli/tests/: pty_smoke.rs
apps/server/: Cargo.toml  build.rs
apps/server/src/: config.rs  db.rs  event_bus.rs  lib.rs  main.rs  proto.rs
crates/provider/: Cargo.toml
crates/provider/src/: api.rs  client.rs  lib.rs  pool.rs  provider.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: agent_runner.rs  api.rs  lib.rs
crates/runtime/tests/: bootstrap_contract.rs
tools/xtask/: Cargo.toml
tools/xtask/src/: changed_lines.rs  coverage.rs  flaky.rs  guard_registry.rs  issue_tree.rs  lib.rs  main.rs  pre_commit.rs  reachability.rs  sdk_wire_schema.rs  sdk_wire_schema_tests.rs  source_guard.rs  workspace_guard.rs
tools/xtask/tests/: changed_lines.rs  coverage_summary.rs  flaky.rs  guard_registry.rs  issue_tree.rs  pre_commit.rs  production_reachability.rs  source_guard.rs
(+3487 files in other folders)
