[workspace]
resolver = "2"
members = [
    "apps/cli",
    "agent/runtime",
    "agent/project",
    "agent/policy",
    "agent/prompt",
    "agent/provider",
    "agent/tools",
    "agent/share",
    "agent/storage",
    "agent/hook",
    "agent/audit",
    "packages/sdk",
    "packages/global/logging",
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
thiserror = "2"
tokio-util = { version = "0.7", features = ["io", "codec", "rt"] }
futures-util = "0.3"
chrono = "0.4"
reqwest = { version = "0.12", features = ["stream"] }
inventory = "0.3"
