[workspace]
resolver = "2"
members = [
    "apps/cli",
    "agent/composition",
    "agent/features/runtime",
    "agent/features/audit",
    "agent/features/hook",
    "agent/features/policy",
    "agent/features/project",
    "agent/features/prompt",
    "agent/features/provider",
    "agent/features/storage",
    "agent/features/tools",
    "agent/shared",
    "packages/sdk",
    "packages/global/logging",
    "packages/global/utils",
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
thiserror = "2"
tokio-util = { version = "0.7", features = ["io", "codec", "rt"] }
futures-util = "0.3"
chrono = "0.4"
reqwest = { version = "0.12", features = ["stream"] }
inventory = "0.3"
