[workspace]
resolver = "2"
members = [
    "apps/cli",
    "agent/composition",
    "agent/features/audit",
    "agent/features/hook",
    "agent/features/policy",
    "agent/features/project",
    "agent/features/prompt",
    "agent/features/provider",
    "agent/features/runtime",
    "agent/features/storage",
    "agent/features/tools",
    "agent/features/update",
    "agent/shared",
    "packages/sdk",
    "packages/global/logging",
    "packages/global/utils",
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
thiserror = "2"
tokio-util = { version = "0.7", features = ["io", "codec", "rt"] }
futures-util = "0.3"
chrono = "0.4"
reqwest = { version = "0.12", features = ["stream", "json"] }
semver = "1"
sha2 = "0.10"
flate2 = "1.0"
tar = "0.4"
inventory = "0.3"

[workspace.package]
version = "0.8.2"
edition = "2021"
