[package]
name = "composition"
version.workspace = true
edition.workspace = true

[dependencies]
runtime = { path = "../features/runtime" }
config = { path = "../features/config" }
tools = { path = "../features/tools" }
provider = { path = "../features/provider" }
project = { path = "../features/project" }
update = { path = "../features/update" }
audit = { path = "../features/audit" }
storage = { path = "../features/storage" }
share = { path = "../shared" }
sdk = { path = "../../packages/sdk" }
async-trait = { workspace = true }
