[package]
name = "composition"
version.workspace = true
edition.workspace = true

[dependencies]
runtime = { path = "../features/runtime" }
config = { path = "../features/config" }
tools = { path = "../features/tools" }
provider = { path = "../features/provider" }
project = { path = "../features/project" }
update = { path = "../features/update" }
context = { path = "../features/context" }
memory = { path = "../features/memory" }
storage = { path = "../features/storage" }
task = { path = "../features/task" }
share = { path = "../shared" }
sdk = { path = "../../packages/sdk" }
logging = { path = "../../packages/global/logging" }
log = "0.4"
async-trait = { workspace = true }

[dev-dependencies]
task = { path = "../features/task" }
tokio = { workspace = true }
tokio-util = { workspace = true }
serde_json = { workspace = true }
tempfile = "3"
