[package]
name = "composition"
version.workspace = true
edition.workspace = true

[dependencies]
runtime = { path = "../features/runtime" }
config = { path = "../features/config" }
tools = { path = "../features/tools" }
policy = { path = "../features/policy" }
provider = { path = "../features/provider" }
project = { path = "../features/project" }
update = { path = "../features/update" }
audit = { path = "../features/audit" }
storage = { path = "../features/storage" }
context = { path = "../features/context" }
memory = { path = "../features/memory" }
task = { path = "../features/task" }
share = { path = "../shared" }
sdk = { path = "../../packages/sdk" }
logging = { path = "../../packages/global/logging" }
tokio = { workspace = true }
tokio-util = { workspace = true }
log = "0.4"
async-trait = { workspace = true }

[dev-dependencies]
tools = { path = "../features/tools", features = ["test-harness"] }
task = { path = "../features/task" }
tokio = { workspace = true }
tokio-util = { workspace = true }
futures-util = { workspace = true }
serde_json = { workspace = true }
tempfile = "3"
