[package]
name = "project"
version = "0.1.0"
edition = "2021"

[dependencies]
aemeath_core = { package = "core", path = "../core" }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tokio-util = { workspace = true }
