[package]
name = "share"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yml = "0.0.12"
async-trait = { workspace = true }
thiserror = { workspace = true }
tokio-util = { workspace = true }
uuid = { version = "1", features = ["v7"] }
log = "0.4"
unicode-width = "0.2"

