[package]
name = "share"
version.workspace = true
edition.workspace = true

[lib]
doctest = false

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yml = "0.0.12"
thiserror = { workspace = true }
tokio-util = { workspace = true }
uuid = { version = "1", features = ["v7"] }
log = "0.4"
unicode-width = "0.2"
logging = { path = "../../packages/global/logging" }
utils = { path = "../../packages/global/utils" }
tool-schema-macros = { path = "../../packages/tool-schema-macros" }

