[package]
name = "storage"
version = "0.1.0"
edition = "2021"

[dependencies]
share = { path = "../shared" }
tokio = { workspace = true }
dirs = "6"
log = "0.4"
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { version = "1", features = ["v4", "v7"] }
