[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "aemeath"
path = "src/main.rs"

[dependencies]
runtime = { path = "../../agent/runtime" }
tokio = { workspace = true }
serde_json = { workspace = true }
clap = { version = "4", features = ["derive", "env"] }
rustyline = "15"
crossterm = { version = "0.28", features = ["events", "event-stream"] }
futures = "0.3"
tokio-util = { workspace = true }
termimad = "0.30"
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "html", "regex-onig"] }
similar = "2"
dirs = "6"
indicatif = "0.17"
console = "0.15"
async-trait = { workspace = true }
base64 = "0.22"
ratatui = "0.29"
tui-textarea = "0.7"
uuid = { version = "1", features = ["v4"] }
unicode-width = "0.2"
once_cell = "1.19"
inventory = { workspace = true }
rand = "0.9"
log = "0.4"
env_logger = "0.11"
