[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
dirs = "6"
mongodb = "3.2"
prost = "0.13"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tonic = "0.12"
tower = "0.5"

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tempfile = "3"
