[package]
name = "provider"
version = "0.1.0"
edition = "2021"

[dependencies]
aemeath_core = { package = "core", path = "../core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
reqwest = { version = "0.12", features = ["json", "stream"] }
reqwest-eventsource = "0.6"
tracing = "0.1"
log = "0.4"
futures-util = { workspace = true }
tokio-util = { workspace = true }
