[package]
name = "runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
aemeath_core = { package = "core", path = "../core" }
provider = { path = "../provider" }
tools = { path = "../tools" }
project = { path = "../project" }
policy = { path = "../policy" }
prompt = { path = "../prompt" }
storage = { path = "../storage" }
hook = { path = "../hook" }
audit = { path = "../audit" }
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = "0.3"
async-trait = { workspace = true }
serde_json = { workspace = true }
log = "0.4"
dirs = "6"
uuid = { version = "1", features = ["v4"] }
