[package]
name = "xtask"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
anyhow = "1"
serde.workspace = true
serde_json.workspace = true
sdk = { path = "../../packages/sdk" }
quote = "1"
syn = { version = "2", features = ["full"] }

[dev-dependencies]
tempfile = "3"
