[package]
name = "audit"
version.workspace = true
edition.workspace = true

[dependencies]
share = { path = "../../shared" }
sdk = { path = "../../../packages/sdk" }
serde = { workspace = true }
async-trait = { workspace = true }
storage = { path = "../storage" }

[dev-dependencies]
serde_json = { workspace = true }
tokio = { workspace = true }
tempfile = "3"
