[package]
name = "config"
version.workspace = true
edition.workspace = true

[dependencies]
share = { path = "../../shared" }
storage = { path = "../storage" }
tokio = { workspace = true }
async-trait = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
log = "0.4"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"
