[package]
name = "context"
version.workspace = true
edition.workspace = true

[dependencies]
share = { path = "../../shared" }
log = "0.4"
dirs = "6"
serde = { workspace = true }
serde_json = { workspace = true }
serde_yml = "0.0.12"
inventory = { workspace = true }
async-trait = { workspace = true }
regex = "1"
thiserror = { workspace = true }
