[package]
name = "context"
version.workspace = true
edition.workspace = true

[features]
# Enables test-only helpers (`test_support`). Consumers must add `context` to
# `[dev-dependencies]` with `features = ["dev"]`. Never enabled in production.
dev = []

[dependencies]
share = { path = "../../shared" }
storage = { path = "../storage" }
task = { path = "../task" }
project = { path = "../project" }
memory = { path = "../memory" }
config = { path = "../config" }
sdk = { path = "../../../packages/sdk" }
provider = { path = "../provider" }
tools = { path = "../tools" }
log = "0.4"
dirs = "6"
serde = { workspace = true }
serde_json = { workspace = true }
inventory = { workspace = true }
async-trait = { workspace = true }
regex = "1"
thiserror = { workspace = true }
uuid = { version = "1", features = ["v4", "v7"] }
chrono = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
futures-util = { workspace = true }
