[package]
name = "hook"
version.workspace = true
edition.workspace = true

[dependencies]
share = { path = "../../shared" }
log = "0.4"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
async-trait = { workspace = true }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
