[package]
name = "memory"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
share = { path = "../../shared" }
storage = { path = "../storage" }
thiserror.workspace = true
tokio.workspace = true
utils = { path = "../../../packages/global/utils" }
uuid = { version = "1", features = ["serde", "v7"] }

[dev-dependencies]
