[package]
name = "project"
version.workspace = true
edition.workspace = true

[dependencies]
share = { path = "../../shared" }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tokio-util = { workspace = true }
