[package]
name = "provider"
version.workspace = true
edition.workspace = true

[features]
test-harness = []

[dependencies]
share = { path = "../../shared" }
logging = { path = "../../../packages/global/logging" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
reqwest = { version = "0.12", features = ["json", "stream"] }
reqwest-eventsource = "0.6"
tracing = "0.1"
log = "0.4"
futures-util = { workspace = true }
tokio-util = { workspace = true }
httpdate = "1"
