[package]
name = "runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
share = { path = "../../shared" }
provider = { path = "../provider" }
tools = { path = "../tools" }
project = { path = "../project" }
policy = { path = "../policy" }
prompt = { path = "../prompt" }
storage = { path = "../storage" }
hook = { path = "../hook" }
audit = { path = "../audit" }
tokio = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
futures = "0.3"
base64 = "0.22"
async-trait = { workspace = true }
serde_json = { workspace = true }
log = "0.4"
env_logger = "0.11"
dirs = "6"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
inventory = { workspace = true }
parking_lot = "0.12"
rand = "0.9"
regex = "1"
thiserror = { workspace = true }
sdk = { path = "../../../packages/sdk" }
logging = { path = "../../../packages/global/logging" }
