[package]
name = "runtime"
version.workspace = true
edition.workspace = true

[dependencies]
share = { path = "../../shared" }
config = { path = "../config" }
provider = { path = "../provider" }
tools = { path = "../tools", features = ["test-harness"] }
project = { path = "../project" }
memory = { path = "../memory" }
policy = { path = "../policy" }
context = { path = "../context" }
storage = { path = "../storage" }
task = { path = "../task" }
hook = { path = "../hook" }
audit = { path = "../audit" }
workflow = { path = "../workflow" }
tokio = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
futures = "0.3"
base64 = "0.22"
async-trait = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"
log = "0.4"
env_logger = "0.11"
dirs = "6"
uuid = { version = "1", features = ["v4", "v7"] }
chrono = "0.4"
inventory = { workspace = true }
parking_lot = "0.12"
rand = "0.9"
regex = "1"
thiserror = { workspace = true }
sdk = { path = "../../../packages/sdk" }
logging = { path = "../../../packages/global/logging" }

tempfile = "3"
