[package]
name = "storage"
version.workspace = true
edition.workspace = true

[dependencies]
share = { path = "../../shared" }
tokio = { workspace = true }
dirs = "6"
log = "0.4"
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { version = "1", features = ["v4", "v7"] }
cap-std = "4"
async-trait = { workspace = true }
sha2 = { workspace = true }
fs2 = "0.4"

[dev-dependencies]
tempfile = "3"
