[package]
name = "storage"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
log = { version = "0.4", features = ["std"] }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { version = "1", features = ["v4", "v7"] }
cap-std = "4"
async-trait = { workspace = true }
sha2 = { workspace = true }
fs2 = "0.4"

[dev-dependencies]
tempfile = "3"
